hard-gists/3141128/run.log
=== Docker Run Log for 3141128 ===
Started at: Mi 29. Okt 13:42:12 CET 2025

[2025-10-29 13:42:13] START: Running container for 3141128
[2025-10-29 13:42:13] SUCCESS: Container eb2a62f6b793312e3bc5e55ac2a7d393bd66f8fd0f6cfec383f737809460529b started for 3141128
=== Container logs for 3141128 ===
  File "/snippet.py", line 28
    print data[38:48, 38:48, 0]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3141128 ===
[2025-10-29 13:42:15] INFO: Container eb2a62f6b793312e3bc5e55ac2a7d393bd66f8fd0f6cfec383f737809460529b has stopped
